@startuml

title __KRYONET's Class Diagram__\n

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.ClientClassExtension {
            + followedToken : String
            + klientName : String
            + systemName : String
            + token : String
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.KryoClient {
            ~ usersHashmap : HashMap<String, Register>
            {static} - TAG : String
            - clientsConnected : boolean
            + KryoClient()
            + isClientConnected()
            + newClient()
            + requestFollow()
            + sendTouches()
            + sendUseDatabase()
            + setClientsConnected()
            + stopClient()
            + unFollow()
            - NetworkRegisteredUsers()
            - addClients()
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network {
            {static} + TOUCH_MOVE : String
            {static} + TOUCH_START : String
            {static} + TOUCH_UP : String
            {static} + port : int
            {static} + register()
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network.FollowClient {
            + follow : boolean
            + token : String
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network.Integers {
            + arrayIntegers : ArrayList<Integer>
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network.Register {
            + token : String
            + userName : String
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network.RegisteredUsers {
            + users : ArrayList<Register>
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network.Touch {
            + clientCreated : Date
            + touchType : String
            + x : float
            + y : float
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network.Touches {
            + values : ArrayList<Touch>
        }
      }
    }
  }
  

  namespace cz.utb.thesisapp {
    namespace services {
      namespace kryonet {
        class cz.utb.thesisapp.services.kryonet.Network.UseDatabase {
            + useDatabase : boolean
        }
      }
    }
  }
  

  cz.utb.thesisapp.services.kryonet.ClientClassExtension -up-|> com.esotericsoftware.kryonet.Client
  cz.utb.thesisapp.services.kryonet.KryoClient o-- cz.utb.thesisapp.services.kryonet.ClientClassExtension : client
  cz.utb.thesisapp.services.kryonet.KryoClient o-- cz.utb.thesisapp.services.Broadcast : broadcast
  cz.utb.thesisapp.services.kryonet.KryoClient o-- cz.utb.thesisapp.services.MyService : service
  cz.utb.thesisapp.services.kryonet.KryoClient o-- cz.utb.thesisapp.services.TokenGenerator : tokenGenerator
  cz.utb.thesisapp.services.kryonet.Network +-down- cz.utb.thesisapp.services.kryonet.Network.FollowClient
  cz.utb.thesisapp.services.kryonet.Network +-down- cz.utb.thesisapp.services.kryonet.Network.Integers
  cz.utb.thesisapp.services.kryonet.Network +-down- cz.utb.thesisapp.services.kryonet.Network.Register
  cz.utb.thesisapp.services.kryonet.Network +-down- cz.utb.thesisapp.services.kryonet.Network.RegisteredUsers
  cz.utb.thesisapp.services.kryonet.Network +-down- cz.utb.thesisapp.services.kryonet.Network.Touch
  cz.utb.thesisapp.services.kryonet.Network +-down- cz.utb.thesisapp.services.kryonet.Network.Touches
  cz.utb.thesisapp.services.kryonet.Network +-down- cz.utb.thesisapp.services.kryonet.Network.UseDatabase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
